<resources>
    <string name="app_name">PosPay</string>
    <string name="company">公司</string>
    <string name="selectCompanyName">请选择企业名称</string>
    <string name="digits_user">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="input_user">请输入您的工号</string>
    <string name="input_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="version">版本号：</string>
    <string name="manage">管理</string>
    <string name="collect">收款</string>
    <string name="check">账单</string>
    <string name="pleaseScanWaybill">请输入或扫描运单号</string>
    <string name="daoFu">到付：</string>
    <string name="yuan">元</string>
    <string name="daiShouKuan">代收款：</string>
    <string name="total">合计：</string>
    <string name="nextStep">下一步</string>
    <string name="number">0123456789</string>
    <string name="reprint">补印</string>
    <string name="signIn">签到</string>
    <string name="bussinessQuery">交易查询</string>
    <string name="quit">退出</string>
    <string name="waybillFour">运单号后4位</string>
    <string name="scan_pay">扫码支付</string>
    <string name="pay_card">刷卡支付</string>
    <string name="transaction">交易中</string>
    <string name="payReason">付款理由</string>
    <string name="bussinessWaybillno">交易运单号</string>
</resources>
