<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xdp50"
        android:background="@color/yellow">

        <TextView
            android:id="@+id/tv_manage"
            android:layout_width="@dimen/xdp50"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="@dimen/sp22"
            android:textColor="@color/black"
            android:background="@drawable/button_selector_yellow"
            android:text="@string/manage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/collect"
            android:textColor="@color/white"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/xdp50"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:textSize="@dimen/sp22"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/button_selector_yellow"
            android:text="@string/check" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_scan_waybill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fl_title"
        android:layout_marginLeft="@dimen/xdp10"
        android:layout_marginRight="@dimen/xdp10"
        android:layout_marginTop="@dimen/xdp10"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="运单"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ydp30"
            android:layout_marginLeft="@dimen/xdp10"
            android:layout_marginRight="@dimen/xdp10"
            android:layout_weight="1"
            android:background="@drawable/wire_shap"
            android:gravity="center_vertical"
            android:hint="@string/pleaseScanWaybill"
            android:paddingLeft="@dimen/xdp5" />

        <ImageView
            android:layout_width="@dimen/ydp30"
            android:layout_height="@dimen/ydp30"
            android:src="@mipmap/scan" />

    </LinearLayout>

    <View
        android:id="@+id/line1"
        style="@style/HorizontalLineStyle"
        android:layout_below="@+id/ll_scan_waybill"
        android:layout_marginLeft="@dimen/xdp5"
        android:layout_marginRight="@dimen/xdp5"
        android:layout_marginTop="@dimen/ydp10" />

    <LinearLayout
        android:id="@+id/ll_pay_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginLeft="@dimen/xdp10"
        android:layout_marginRight="@dimen/xdp10"
        android:layout_marginTop="@dimen/xdp10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daoFu"
                android:textSize="@dimen/sp18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/xdp10"
                android:layout_marginRight="@dimen/xdp10"
                android:text="18"
                android:textSize="@dimen/sp18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:textSize="@dimen/sp18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daiShouKuan"
                android:textColor="@color/color999999"
                android:textSize="@dimen/sp18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/xdp10"
                android:layout_marginRight="@dimen/xdp10"
                android:text="18"
                android:textColor="@color/color999999" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:textColor="@color/color999999"
                android:textSize="@dimen/sp18" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/line2"
        style="@style/HorizontalLineStyle"
        android:layout_below="@+id/ll_pay_type"
        android:layout_marginLeft="@dimen/xdp5"
        android:layout_marginRight="@dimen/xdp5"
        android:layout_marginTop="@dimen/ydp10" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginLeft="@dimen/xdp10"
        android:layout_marginRight="@dimen/xdp10"
        android:layout_marginTop="@dimen/xdp10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="@dimen/sp24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xdp10"
            android:layout_marginRight="@dimen/xdp10"
            android:text="36"
            android:textSize="@dimen/sp24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan"
            android:textSize="@dimen/sp24" />

    </LinearLayout>

    <Button
        android:layout_width="@dimen/xdp200"
        android:layout_height="@dimen/ydp35"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/ydp5"
        android:background="@drawable/button_selector_yellow"
        android:text="@string/nextStep"
        android:textColor="@color/white"
        android:textSize="@dimen/sp24"
        android:textStyle="bold" />

</RelativeLayout>